<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
<string name="app_name">Just Java</string>
<string name="name">Name</string>
<string name="topping">Topping</string>
<string name="whippedCream">Whipped Cream</string>
<string name="chocolate">Chocolate</string>
<string name="quantity">Quantity</string>
<string name="order">Order</string>
<string name="addWhippedCream">Add Whipped Cream.</string>
<string name="addChocolate">Add Chocolate.</string>
<string name="thankYou">Thank You!</string>
<string name="orderSummaryMailSubject">Just Java order for <xliff:g id="subject" expample="Ahmed">%s</xliff:g></string>
<string name="orderSummaryName">Name: <xliff:g id="name" expample="Ahmed">%s</xliff:g></string>
<string name="orderSummaryQuantity">Quantity: <xliff:g id="quantity" expample="10">%d</xliff:g></string>
<string name="orderSummaryPrice">Price: <xliff:g id="price" expample="10">%d</xliff:g></string>
</resources>